# VLP-pico

./: .gitattributes  .gitignore  CMakeLists.txt  MLP-ONLINE-PICO-1749305872.pth  MLP-ONLINE-PICO-1749415744.pth  MLP-ONLINE-PICO-1749673828.pth  MLP-ONLINE-PICO-1749852566.pth  MLP-ONLINE-PICO-1749931306.pth  MLP-ONLINE-PICO-1750018984.pth  README.md  blink.c  build.sh  model_data.c  model_int8.tflite  test.ipynb  torch2tflite.py
pc_interface/: main.py  main_old.py  test.csv
pc_interface/saved_timeseries_run/: default.json
pc_interface/saved_timeseries_runs/: results.json
src/: debug.h  vlp_pico.c
src/data/: data.c  data.h  downsampled_data.c  downsampled_data.h  lambertian.c  lambertian.h
src/degradation_model/: degradation_model.c  degradation_model.h
src/io/: io.c  io.h
src/led/: led.c  led.h
src/model/: model.cpp  model.h  model_data.c  model_data.h
tests/: CMakeLists.txt
